infrastructure/k8s_configs/logging/02-deployments.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: grafana
  namespace: logstack
  name: grafana
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - name: grafana
        image: grafana/grafana:master
        volumeMounts:
        - mountPath: /var/lib/grafana
          name: grafana-data
        - mountPath: /var/log/grafana
          name: grafana-log
        - mountPath: /etc/grafana
          name: grafana-config
        ports:
        - containerPort: 3000
      restartPolicy: Always
      volumes:
        - name: grafana-data
          hostPath:
            path: /mnt/nfs/grafana/data
            type: DirectoryOrCreate
        - name: grafana-log
          hostPath:
            path: /mnt/nfs/grafana/log
            type: DirectoryOrCreate
        - name: grafana-config
          hostPath:
            path: /mnt/nfs/grafana/etc
            type: DirectoryOrCreate
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: kibana-ui
  namespace: logstack
  name: kibana-ui
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: kibana-ui
        component: logstack
    spec:
      containers:
      - name: kibana-ui
        image: registry.nepeat.com/kibana:v8
        ports:
        - containerPort: 5601
      imagePullSecrets:
      - name: regcred
      restartPolicy: Always
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: kibana-proxy
  namespace: logstack
  name: kibana-proxy
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: kibana-proxy
        component: logstack
    spec:
      containers:
      - name: kibana-proxy
        image: registry.nepeat.com/oauth2_proxy:v2
        command:
        - oauth2_proxy
        - -provider=google
        - --cookie-secure=false
        - --upstream=http://kibana-ui:5601
        - --http-address=http://0.0.0.0:5601
        - --redirect-url=https://logs.nepeat.com/oauth2/callback
        - --email-domain=fucking.soy
        ports:
        - containerPort: 5601
      imagePullSecrets:
      - name: regcred
      restartPolicy: Always
# ---
# apiVersion: extensions/v1beta1
# kind: Deployment
# metadata:
#   labels:
#     app: elastalert
#   namespace: logstack
#   name: elastalert
# spec:
#   replicas: 1
#   template:
#     metadata:
#       labels:
#         app: elastalert
#         component: logstack
#     spec:
#       containers:
#       - name: elastalert
#         image: registry.nepeat.com/elastalert:v3
#       imagePullSecrets:
#       - name: regcred
#       restartPolicy: Always
