infrastructure/k8s_configs/logging/00-services.yml
apiVersion: v1
kind: Namespace
metadata:
  name: logstack
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: grafana
  namespace: logstack
  name: grafana
spec:
  clusterIP: None
  ports:
  - name: grafana
    port: 3000
    targetPort: 3000
  selector:
    app: grafana
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kibana-ui
  namespace: logstack
  name: kibana-ui
spec:
  clusterIP: None
  ports:
  - name: kibana-ui
    port: 5601
    targetPort: 5601
  selector:
    app: kibana-ui
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kibana-proxy
  namespace: logstack
  name: kibana-proxy
spec:
  clusterIP: None
  ports:
  - name: kibana-proxy
    port: 5601
    targetPort: 5601
  selector:
    app: kibana-proxy
